umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@n_group_p4o10.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms [
        "P"
        "P"
        "P"
        "P"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"]
      :bonds [
        [0 4 :single]
        [0 5 :single]
        [0 6 :single]
        [0 10 :double]
        [1 4 :single]
        [1 7 :single]
        [1 8 :single]
        [1 11 :double]
        [2 5 :single]
        [2 7 :single]
        [2 9 :single]
        [2 12 :double]
        [3 6 :single]
        [3 8 :single]
        [3 9 :single]
        [3 13 :double]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :atoms [
        "P"
        "P"
        "P"
        "P"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"]
      :bonds [
        [0 4 :single]
        [0 5 :single]
        [0 6 :single]
        [0 10 :double]
        [1 4 :single]
        [1 7 :single]
        [1 8 :single]
        [1 11 :double]
        [2 5 :single]
        [2 7 :single]
        [2 9 :single]
        [2 12 :double]
        [3 6 :single]
        [3 8 :single]
        [3 9 :single]
        [3 13 :double]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :atoms [
        "P"
        "P"
        "P"
        "P"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"]
      :bonds [
        [0 4 :single]
        [0 5 :single]
        [0 6 :single]
        [0 10 :double]
        [1 4 :single]
        [1 7 :single]
        [1 8 :single]
        [1 11 :double]
        [2 5 :single]
        [2 7 :single]
        [2 9 :single]
        [2 12 :double]
        [3 6 :single]
        [3 8 :single]
        [3 9 :single]
        [3 13 :double]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :atoms [
        "P"
        "P"
        "P"
        "P"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"
        "O#n2"]
      :bonds [
        [0 4 :single]
        [0 5 :single]
        [0 6 :single]
        [0 10 :double]
        [1 4 :single]
        [1 7 :single]
        [1 8 :single]
        [1 11 :double]
        [2 5 :single]
        [2 7 :single]
        [2 9 :single]
        [2 12 :double]
        [3 6 :single]
        [3 8 :single]
        [3 9 :single]
        [3 13 :double]]}
    :success true
    :tie-breaks []}}
